<resources>
    <string name="app_name">DevNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_welcome">Welcome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="unknown_account_type">Unknown account type.</string>
    <string name="unknown_auth_token_type">Unknown authentication token type.</string>

    <string name="error_unknown">An unknown error occurred. Please try again later.</string>
    <string name="error_invalid_credentials">Invalid username/password.</string>
    <string name="error_bad_request">Please check the values you entered and try again.</string>
    <string name="add_account_activity">Add Account</string>
    <string name="relogin_title">Re-enter credentials</string>
    <string name="relogin_info">To continue, please re-enter your DevNews account information.</string>
    <string name="username_empty">Username cannot be empty.</string>
    <string name="password_empty">Password cannot be empty.</string>
    <string name="welcome_title">Welcome to DevNews!</string>
    <string name="welcome_subtitle">DevNews is a community focused on news about technology and computing.</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="login_problems">Problems logging in? Contact us!</string>
    <string name="view_comments">View comments</string>
    <string name="upvote">Upvote</string>
    <string name="byline">%1$s by %2$s</string>
    <string name="refresh_button">Refresh</string>
    <string name="error_story_not_found">The story was not found. It may have been deleted by the submitter or by moderators.</string>
    <string name="title_activity_story">Story</string>
    <string name="write_a_new_comment">Write a new comment…</string>
    <string name="submit_comment">Submit comment</string>
    <string name="reply">Reply</string>
    <string name="error_parent_comment_not_found">The parent comment couldn\'t be found. It\'s possible that the comment was deleted by the creator or by moderators, or the story may be deleted.</string>
    <string name="error_comment_not_found">The comment doesn\'t exist. It may have been deleted by its author or by moderators.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="stories_with_tag">Stories with tag</string>
    <string name="error_tag_not_found">Couldn\'t find that tag. Please double-check if it exists.</string>
    <string name="title_activity_tag">Tag</string>
    <string name="try_again">Try Again</string>
    <string name="sender_to_recipient">%1$s to %2$s</string>
    <string name="error_message_thread_not_found">The message thread could not be found.</string>
    <string name="title_activity_message_thread">Message Thread</string>
    <string name="fragment_message_list">Messages</string>
    <string name="menu_message_list">Messages</string>
    <string name="field_recipient">Recipient</string>
    <string name="field_content">Enter your message…</string>
    <string name="create_message_fab">Compose New Message</string>
    <string name="validate_recipient_empty">Recipient name cannot be empty.</string>
    <string name="validate_content_empty">Message content cannot be empty.</string>
    <string name="error_recipient_not_found">That recipient wasn\'t found. Make sure you spelled the username correctly.</string>
    <string name="send_message">Send message</string>
    <string name="send_reply">Send reply</string>
    <string name="field_content_reply">Enter your reply…</string>
    <string name="error_message_thread_not_found_reply">Could not find the comment thread. The thread may be deleted, or the recipient\'s account might have been removed.</string>
    <string name="title_activity_user_detail">User Details</string>
    <string name="user_detail_joined">Joined:</string>
    <string name="user_detail_karma">Karma:</string>
    <string name="user_detail_stories_submitted">Stories Submitted:</string>
    <string name="user_detail_comments_posted">Comments Posted:</string>
    <string name="user_detail_homepage">Homepage:</string>
    <string name="user_detail_about">About:</string>
    <string name="user_avatar">User avatar</string>
    <string name="error_user_not_found">The user wasn\'t found. The account may have been disabled or removed by a moderator.</string>
    <string name="story_title_hint">Story title</string>
    <string name="story_title_helper">Please do not editorialize titles.</string>
    <string name="story_url_hint">Story URL</string>
    <string name="url_or_title">…or…</string>
    <string name="story_text_hint">Story text</string>
    <string name="story_tags_hint">Tags</string>
    <string name="story_create_rules_reminder">If you haven\'t, would you mind taking a look at our rules?</string>
    <string name="story_tags_helper">Select between 1 to 3 tags. Please use the appropriate tags.</string>
    <string name="create_story_fab">Submit Story</string>
    <string name="title_activity_story_create">Submit Story</string>
    <string name="story_create_title_empty">Title cannot be empty.</string>
    <string name="story_create_url_spaces">URL may not contain spaces.</string>
    <string name="story_create_no_url_or_text">You must either add a URL or text.</string>
    <string name="story_create_both_url_and_text">You can only have a URL or text.</string>
    <string name="story_create_tags_minimum">You must select at least one tag.</string>
    <string name="story_create_tags_maximum">You cannot add more than 3 tags.</string>
    <string name="story_create_is_authored">I am the author of this content</string>
    <string name="comment_unread">(unread)</string>
    <string name="register_username_helper">Must be unique, and 32 characters at most.</string>
    <string name="login_username_helper">Use your devnews.org username.</string>
    <string name="email">E-mail address</string>
    <string name="register_email_helper">We won\'t spam you. Used for password resets.</string>
    <string name="register_password_helper">Minimum 8 characters. Use a memorable password.</string>
    <string name="verify_password">Verify password</string>
    <string name="register_problems">Problems registering? Contact us!</string>
    <string name="register_username_empty">Username cannot be empty.</string>
    <string name="register_email_invalid">You must enter a valid e-mail address.</string>
    <string name="register_email_empty">E-mail address cannot be empty.</string>
    <string name="register_password_minimum">Password must be a minimum of 8 characters.</string>
    <string name="register_password_empty">Password cannot be empty.</string>
    <string name="register_verify_match">Passwords don\'t match.</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_register">Register</string>
</resources>