<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_welcome">

    <fragment
        android:id="@+id/nav_welcome"
        android:name="org.devnews.android.ui.welcome.WelcomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_welcome_to_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_welcome_to_register"
            app:destination="@id/nav_register" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="org.devnews.android.ui.welcome.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_register"
        android:name="org.devnews.android.ui.welcome.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register" />
</navigation>