<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <import type="org.devnews.android.ui.story.create.StoryCreateViewModel" />
        <variable name="viewmodel" type="StoryCreateViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:id="@+id/progress_container"
                android:layout_width="0dp"
                android:layout_height="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility='@{viewmodel.loading ? View.VISIBLE : View.GONE}'/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/story_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/story_title_hint"
                    android:paddingBottom="8dp"
                    app:helperText="@string/story_title_helper"
                    android:enabled="@{!viewmodel.loading}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.title}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/story_url_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/story_url_hint"
                    android:paddingBottom="8dp"
                    android:enabled="@{!viewmodel.loading}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.url}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/ThemeOverlay.DevNews.TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/url_or_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/story_text_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/story_text_hint"
                    android:paddingBottom="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10000"
                    android:enabled="@{!viewmodel.loading}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:maxLines="10"
                        android:minLines="5"
                        android:singleLine="false"
                        android:text="@={viewmodel.text}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/story_tags_spinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/story_tags_hint"
                    android:paddingBottom="8dp"
                    app:helperText="@string/story_tags_helper"
                    android:enabled="@{!viewmodel.loading}">

                    <AutoCompleteTextView
                        android:id="@+id/story_tags_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/story_tags_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:clickable="@{!viewmodel.loading}">

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/story_is_authored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/story_create_is_authored"
                    android:checked="@={viewmodel.isAuthored}"
                    android:enabled="@{!viewmodel.loading}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/story_create_rules_reminder"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/create_story_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:contentDescription="@string/create_message_fab"
                app:srcCompat="@drawable/ic_baseline_check_24"
                android:enabled="@{!viewmodel.loading}" />
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>