<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_story_details"
    android:orientation="horizontal">

    <View
        android:id="@+id/indent_indicator"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="@color/secondaryColor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/upvote"
            android:focusable="true"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_arrow_up_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/score_text"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/comment_byline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/comment_unread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_unread"
                    android:layout_marginStart="4dp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/comment_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:textIsSelectable="true"
                tools:ignore="RtlSymmetry" />

            <!-- minWidth required because otherwise Button wants to maintain a minimum width and just
            doesn't look nice when not aligned with the rest of the text. -->
            <Button
                android:id="@+id/reply_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/reply" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>